--- a/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
+++ b/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
@@ -12,7 +12,7 @@
         </RadzenTabsItem>
 
         <RadzenTabsItem Text="Data Preview">
-            <StemPreview ComponentId="2FD1B74D-1990-404D-9E98-977E9B6CA545" />
+            <StemPreview />
         </RadzenTabsItem>
 
     </Tabs>
