--- a/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
+++ b/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
@@ -1,6 +1,6 @@
 @using NuclearEvaluation.Library.Commands
 
-<RadzenTabs @bind-SelectedIndex=@_currentTabIndex Style="min-height: 1000px;">
+<RadzenTabs @bind-SelectedIndex=@_currentTabIndex Style="min-height: 1000px;" RenderMode="TabRenderMode.Client">
     <Tabs>
         <RadzenTabsItem Text="Series">
             <div style="padding: 10px; margin-bottom: 10px;">
@@ -12,7 +12,7 @@
         </RadzenTabsItem>
 
         <RadzenTabsItem Text="Data Preview">
-            <FileUploadPreview />
+            <StemPreview />
         </RadzenTabsItem>
 
     </Tabs>
