--- a/NuclearEvaluation.Server/_Imports.razor
+++ b/NuclearEvaluation.Server/_Imports.razor
@@ -31,5 +31,7 @@
 
 @using NuclearEvaluation.Kernel.Extensions
 
+@using NuclearEvaluation.SharedServices.Services
+
 @using FluentValidation
 @using FluentValidation.Results
