--- a/NuclearEvaluation.Server/Shared/DataManagement/StemPreview.razor
+++ b/NuclearEvaluation.Server/Shared/DataManagement/StemPreview.razor
@@ -28,6 +28,7 @@
         <RadzenDataGrid Data="@files"
                         TItem="UploadedFile"
                         Style="width: 100%; margin-top: 10px;"
+                        AllowAlternatingRows="false"
                         ColumnWidth="auto">
             <Columns>
                 <RadzenDataGridColumn TItem="UploadedFile"
