--- a/NuclearEvaluation.Server/Shared/DataManagement/StemPreview.razor
+++ b/NuclearEvaluation.Server/Shared/DataManagement/StemPreview.razor
@@ -25,65 +25,8 @@
 
     @if (files.Any())
     {
-        <RadzenDataGrid Data="@files"
-                        TItem="UploadedFile"
-                        Style="width: 100%; margin-top: 10px;"
-                        AllowAlternatingRows="false"
-                        ColumnWidth="auto">
-            <Columns>
-                <RadzenDataGridColumn TItem="UploadedFile"
-                                      Property="BrowserFile.Name"
-                                      Title="File Name"
-                                      Width="50%" />
-                <RadzenDataGridColumn TItem="UploadedFile"
-                                      Title="File Size (MB)"
-                                      Width="100px"
-                                      TextAlign="TextAlign.Center">
-                    <Template Context="file">
-                        <span>@((file.BrowserFile.Size.AsMegabytes()).ToString("F2")) MB</span>
-                    </Template>
-                </RadzenDataGridColumn>
-                <RadzenDataGridColumn TItem="UploadedFile"
-                                      Width="150px"
-                                      TextAlign="TextAlign.Center"
-                                      Title="Upload Status">
-                    <Template Context="file">
-                        @if (file.Status == FileStatus.Uploaded)
-                        {
-                            <RadzenIcon Icon="check" Color="green" />
-                            <span>Uploaded</span>
-                        }
-                        else if (file.Status == FileStatus.Uploading || file.Status == FileStatus.Deleting)
-                        {
-                            <RadzenStack AlignItems="AlignItems.Center"
-                                         JustifyContent="JustifyContent.Center"
-                                         Style="height: 100%;">
-                                <RadzenProgressBarCircular Value="100"
-                                                           ShowValue="false"
-                                                           Mode="ProgressBarMode.Indeterminate" />
-                            </RadzenStack>
-                        }
-                        else if (file.Status == FileStatus.UploadError)
-                        {
-                            <span>@(file.ErrorMessage)</span>
-                        }
-                        else
-                        {
-                            <span>Not uploaded</span>
-                        }
-                    </Template>
-                </RadzenDataGridColumn>
-                <RadzenDataGridColumn TItem="UploadedFile"
-                                      Width="100px"
-                                      TextAlign="TextAlign.Center"
-                                      Title="Remove">
-                    <Template Context="file">
-                        <RadzenButton Icon="delete"
-                                      Click="() => RemoveFile(file)" />
-                    </Template>
-                </RadzenDataGridColumn>
-            </Columns>
-        </RadzenDataGrid>
+        <FileUploadGrid Data="@files" 
+                        OnRemoveFile="@RemoveFile" />
     }
 
     @if (files.Any(f => f.Status == FileStatus.Pending))
