adjust stem preview grid visibility

--- a/NuclearEvaluation.Server/Shared/DataManagement/StemPreview.razor
+++ b/NuclearEvaluation.Server/Shared/DataManagement/StemPreview.razor
@@ -38,6 +38,6 @@
 
     <StemPreviewEntryGrid @ref="stemPreviewEntryGrid"
                           StemSessionId="@sessionId"
-                          Visible="@files.Any(x => x.Status == FileStatus.Uploaded)" />
+                          Visible="@ShowStemPreviewEntryGrid()" />
 
 </RadzenCard>
