progress on PMI report

--- a/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
+++ b/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
@@ -11,8 +11,12 @@
                         AllowEdit="true" />
         </RadzenTabsItem>
 
-        <RadzenTabsItem Text="Data Preview">
+        <RadzenTabsItem Text="STEM Preview">
             <StemPreview />
+        </RadzenTabsItem>
+
+        <RadzenTabsItem Text="PMI Report Upload">
+            <PmiReportUpload />
         </RadzenTabsItem>
 
     </Tabs>
