before doing context rework

--- a/NuclearEvaluation.Server/_Imports.razor
+++ b/NuclearEvaluation.Server/_Imports.razor
@@ -15,19 +15,20 @@
 @using NuclearEvaluation.Server
 @using NuclearEvaluation.Server.Shared
 @using NuclearEvaluation.Server.Models
-@using NuclearEvaluation.Server.Models.Identity;
 @using NuclearEvaluation.Server.Shared.Generics
 @using NuclearEvaluation.Server.Data
 @using NuclearEvaluation.Server.Validators
 @using NuclearEvaluation.Server.Shared.Grids
 
 @using NuclearEvaluation.Kernel.Models.Views
-@using NuclearEvaluation.Kernel.Models.Domain
 @using NuclearEvaluation.Kernel.Enums
 @using NuclearEvaluation.Kernel.Models.Filters
 @using NuclearEvaluation.Kernel.Interfaces
 @using NuclearEvaluation.Kernel.Models.QueryBuilder
 @using NuclearEvaluation.Kernel.Models.DataManagement
+
+@using NuclearEvaluation.Kernel.Models.Identity;
+@using NuclearEvaluation.Kernel.Models.Domain
 
 @using NuclearEvaluation.Kernel.Extensions
 
