solution clean up

--- a/src/NuclearEvaluation.Server/Shared/DataManagement/PmiReportUpload.razor
+++ b/src/NuclearEvaluation.Server/Shared/DataManagement/PmiReportUpload.razor
@@ -5,7 +5,7 @@
     <RadzenLabel Text="Acceptable format: .docx | Max file size: 50 MB" Style="display: block; margin-bottom: 10px;" />
 
     <RadzenLabel Text="Warning: This feature is in early alpha stage and may not work as expected."
-                 Style="color: red; font-weight: bold; display: block; margin-bottom: 10px;" />
+                 Style="color: darkorange; font-weight: bold; display: block; margin-bottom: 10px;" />
 
     <RadzenLabel Text="Report Date:" Component="DatePicker" Style="margin-right: 10px; display: block; margin-bottom: 10px;" />
     <ValidatedDateOnlyPicker @ref="reportDatePicker"
