--- a/src/NuclearEvaluation.Server/Shared/Generics/ValidatedDateOnlyPicker.razor
+++ b/src/NuclearEvaluation.Server/Shared/Generics/ValidatedDateOnlyPicker.razor
@@ -14,7 +14,7 @@
                       Inline="true"
                       Name="@Name" />
 
-    @if (_hasValidationErrors && !string.IsNullOrEmpty(_validationMessage))
+    @if (Visible && _hasValidationErrors && !string.IsNullOrEmpty(_validationMessage))
     {
         <div class="validation-tooltip"
         style="--tooltip-offset-x:@TooltipOffsetXpx; --tooltip-offset-y:@TooltipOffsetYpx;">
@@ -22,15 +22,3 @@
         </div>
     }
 </div>
-
-
-@code {
-    // protected override void OnInitialized()
-    // {
-    //     base.OnInitialized();
-
-    //     
-    //     _initialValue = DateOnly.FromDateTime(DateTime.UtcNow);
-    //     PropertyValue = _initialValue;
-    // }
-}
