--- a/src/NuclearEvaluation.Server/Shared/Generics/ValidatedTextArea.razor
+++ b/src/NuclearEvaluation.Server/Shared/Generics/ValidatedTextArea.razor
@@ -14,7 +14,7 @@
                     @onblur="HandleOnBlur"
                     Name="@Name" />
 
-    @if (_hasValidationErrors && !string.IsNullOrEmpty(_validationMessage))
+    @if (Visible && _hasValidationErrors && !string.IsNullOrEmpty(_validationMessage))
     {
         <div class="validation-tooltip"
              style="--tooltip-offset-x:@TooltipOffsetXpx; --tooltip-offset-y:@TooltipOffsetYpx;">
