--- a/src/NuclearEvaluation.Server/Shared/DataManagement/PmiReportUpload.razor
+++ b/src/NuclearEvaluation.Server/Shared/DataManagement/PmiReportUpload.razor
@@ -1,52 +1,71 @@
 ﻿@using NuclearEvaluation.Kernel.Models.DataManagement.PMI
 
 <RadzenCard Variant="Variant.Outlined" style="padding: 1rem;">
-    <RadzenLabel Text="Easily upload your Project Management Insights (PMI) reports here." Style="font-weight: bold; display: block; margin-bottom: 10px;" />
-    <RadzenLabel Text="Acceptable format: .docx | Max file size: 50 MB" Style="display: block; margin-bottom: 10px;" />
-
+    <RadzenLabel Text="Easily upload your Project Management Insights (PMI) reports here."
+                 Style="font-weight: bold; display: block; margin-bottom: 10px;" />
+    <RadzenLabel Text="Acceptable format: .docx | Max file size: 50 MB"
+                 Style="display: block; margin-bottom: 10px;" />
     <RadzenLabel Text="Warning: This feature is in early alpha stage and may not work as expected."
-                 Style="color: darkorange; font-weight: bold; display: block; margin-bottom: 10px;" />
+                 Style="color: darkorange; font-weight: bold; display: block; margin-bottom: 20px;" />
 
-    <RadzenLabel Text="Report Date:" Component="DatePicker" Style="margin-right: 10px; display: block; margin-bottom: 10px;" />
+    <RadzenLabel Text="Report Date:"
+                 Style="display: block; margin-bottom: 5px;" />
     <ValidatedDateOnlyPicker @ref="reportDatePicker"
                              Model="@reportSubmission"
                              PropertyExpression="@(x => x.ReportDate)"
                              Validator="@PmiReportSubmissionValidator"
                              AutoCompleteType="AutoCompleteType.Off"
-                             Style="width: 100%; resize:none;"
-                             Rows="5"
-                             OnValidationStateChanged="@OnReportNameValidationChanged"
-                             DebounceTimeout="TimeSpan.Zero"
-                             TooltipOffsetX="-194" />
+                             Style="width: 325px; margin-bottom: 20px;"
+                             OnValidationStateChanged="@OnReportSubmissionChanged"
+                             TooltipOffsetX="-1000"
+                             DebounceTimeout="TimeSpan.Zero" />
 
-    <RadzenButton Text="Select report file in .docx format"
-                  Icon="folder_open"
-                  Style="margin-right: 10px; margin-bottom: 10px;"
-                  Click="TriggerFileInputClick" />
-
-    <InputFile @ref="fileInput"
-               OnChange="OnFileChange"
-               accept=".docx"
-               style="display:none" />
+    <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 20px;">
+        <RadzenButton Text="Select report file in .docx format"
+                      Icon="folder_open"
+                      Click="TriggerFileInputClick" />
+        <InputFile @ref="fileInput"
+                   OnChange="OnFileChange"
+                   accept=".docx"
+                   style="display:none" />
+        @if (SelectedFile is not null)
+        {
+            <RadzenLabel Text=@($"{SelectedFile.Name} - {(SelectedFile.Size.AsMegabytes()):F2} MB")
+                         Style="display: inline-block;" />
+        }
+    </div>
 
     @if (SelectedFile is not null)
     {
-        <RadzenLabel Text=@($"{SelectedFile.Name} - {(SelectedFile.Size.AsMegabytes()):F2} MB")
-                     Style="margin-left: 10px; display: block; margin-bottom: 10px;" />
+        <RadzenLabel Text="Report Name:"
+                     Style="display: block; margin-bottom: 5px;" />
     }
+    <ValidatedTextBox TModel="PmiReportSubmission"
+                      @ref="reportNamePicker"
+                      Model="@reportSubmission"
+                      Visible="@(SelectedFile is not null)"
+                      PropertyExpression="@(x => x.ReportName)"
+                      Validator="@PmiReportSubmissionValidator"
+                      DebounceTimeout="TimeSpan.FromMilliseconds(500)"
+                      AutoCompleteType="AutoCompleteType.Off"
+                      OnValidationStateChanged="@OnReportSubmissionChanged"
+                      TooltipOffsetX="-680"
+                      TooltipOffsetY="38"
+                      Style="width: 450px; margin-bottom: 20px;" />
+
 
     <RadzenButton Text="Submit"
                   Icon="save"
                   Click="OnSubmit"
                   Disabled="@(!IsFormValid)"
-                  Style="margin-top: 10px;" />
+                  Style="margin-bottom: 20px;" />
 
     @if (!string.IsNullOrWhiteSpace(Message))
     {
         <RadzenAlert Text="@Message"
                      Severity="AlertSeverity.Warning"
                      Closeable="true"
-                     Style="margin-top: 10px;" />
+                     Style="@MessageStyle" />
     }
 
     <RadzenLabel Text="Once submitted, your report will be processed and securely distributed to designated locations such as corporate email and shared file storage platforms. This automatic dissemination ensures that key stakeholders are promptly updated with vital project management insights."
