--- a/src/NuclearEvaluation.Server/Shared/Generics/ValidatedDateOnlyPicker.razor
+++ b/src/NuclearEvaluation.Server/Shared/Generics/ValidatedDateOnlyPicker.razor
@@ -14,7 +14,7 @@
                       Inline="true"
                       Name="@Name" />
 
-    @if (Visible && _hasValidationErrors && !string.IsNullOrEmpty(_validationMessage))
+    @if (Visible && !IsValid && !string.IsNullOrEmpty(_validationMessage))
     {
         <div class="validation-tooltip"
         style="--tooltip-offset-x:@TooltipOffsetXpx; --tooltip-offset-y:@TooltipOffsetYpx;">
