add pmi report grid

--- a/src/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
+++ b/src/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
@@ -19,5 +19,9 @@
             <PmiReportUpload />
         </RadzenTabsItem>
 
+        <RadzenTabsItem Text="PMI Report Dashboard">
+            <PmiReportGrid />
+        </RadzenTabsItem>
+
     </Tabs>
 </RadzenTabs>
