some progress on pmi dashboard

--- a/src/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
+++ b/src/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
@@ -20,7 +20,7 @@
         </RadzenTabsItem>
 
         <RadzenTabsItem Text="PMI Report Dashboard">
-            <PmiReportGrid />
+            <PmiReportDashboard />
         </RadzenTabsItem>
 
     </Tabs>
