--- a/src/NuclearEvaluation.Server/Shared/Grids/PmiReportGrid.razor
+++ b/src/NuclearEvaluation.Server/Shared/Grids/PmiReportGrid.razor
@@ -43,7 +43,7 @@
 
             <RadzenDataGridColumn Property="@nameof(PmiReportView.UserName)"
                                   TextAlign="TextAlign.Left"
-                                  Title="User Name" />
+                                  Title="Author" />
 
             <RadzenDataGridColumn Property="@nameof(PmiReportView.ReportStatus)"
                                   TextAlign="TextAlign.Left"
