progress on PMI report dashboard

--- a/src/NuclearEvaluation.Server/Shared/Grids/PmiReportGrid.razor
+++ b/src/NuclearEvaluation.Server/Shared/Grids/PmiReportGrid.razor
@@ -1,6 +1,6 @@
 @inherits BaseGridGeneric<PmiReportView>
 
-<div style="display:@(Visible ? "block" : "none");">
+<div style="display:@(Visible ? "block" : "none")">
     <GridButtonRibbon>
         <ResetGridButton Click="@(() => Reset())" />
     </GridButtonRibbon>
@@ -26,14 +26,14 @@
                     PagingSummaryFormat="@("Displaying page {0:N0} of {1:N0} <b>(total {2:N0} records)</b>")"
                     FilterMode="FilterMode.Advanced">
         <Columns>
-            <RadzenDataGridColumn Property="@nameof(PmiReportView.ReportName)"
+            <RadzenDataGridColumn Property="@nameof(PmiReportView.Name)"
                                   Title="Report Name"
                                   Width="125px"
                                   TextAlign="TextAlign.Left">
                 <Template Context="report">
                     <a href="javascript:void(0)" style="cursor:pointer;text-decoration:underline;"
                        @onclick="@(() => TriggerDownload(report.Id))">
-                        @report.ReportName
+                        @report.Name
                     </a>
                 </Template>
             </RadzenDataGridColumn>
@@ -44,9 +44,9 @@
             <RadzenDataGridColumn Property="@nameof(PmiReportView.UserName)"
                                   TextAlign="TextAlign.Left"
                                   Title="Author" />
-            <RadzenDataGridColumn Property="@nameof(PmiReportView.ReportStatus)"
+            <RadzenDataGridColumn Property="@nameof(PmiReportView.Status)"
                                   TextAlign="TextAlign.Left"
-                                  Title="Report Status" />
+                                  Title="Status" />
         </Columns>
     </RadzenDataGrid>
 </div>
