--- a/src/NuclearEvaluation.Server/Shared/Grids/PmiReportGrid.razor
+++ b/src/NuclearEvaluation.Server/Shared/Grids/PmiReportGrid.razor
@@ -36,7 +36,7 @@
                     <Columns>
                         <RadzenDataGridColumn Title="Distribution Channel">
                             <Template Context="entry">
-                                @entry.DistributionChannel.Humanize()
+                                @entry.DistributionChannel
                             </Template>
                         </RadzenDataGridColumn>
                         <RadzenDataGridColumn Title="Distribution Status">
