pmi report grid add row render

--- a/src/NuclearEvaluation.Server/Shared/Grids/PmiReportGrid.razor
+++ b/src/NuclearEvaluation.Server/Shared/Grids/PmiReportGrid.razor
@@ -23,6 +23,7 @@
                     PagerHorizontalAlign="HorizontalAlign.Left"
                     ShowPagingSummary="true"
                     TItem="PmiReportView"
+                    RowRender="RowRender"
                     EmptyTemplate="@EmptyTemplate"
                     PagingSummaryFormat="@("Displaying page {0:N0} of {1:N0} <b>(total {2:N0} records)</b>")"
                     ExpandMode="DataGridExpandMode.Multiple">
