progress on PMI report

--- a/src/NuclearEvaluation.Server/Shared/Grids/PmiReportGrid.razor
+++ b/src/NuclearEvaluation.Server/Shared/Grids/PmiReportGrid.razor
@@ -29,7 +29,7 @@
                     ExpandMode="DataGridExpandMode.Multiple">
 
         <Template Context="report">
-            <div style="max-width:1000px; overflow-x: auto; margin-left: 23px;">
+            <div style="max-width:1000px; overflow-x: auto;">
                 <RadzenDataGrid AllowFiltering="false"
                                 AllowPaging="true"
                                 AllowSorting="true"
