progress on pmi report dashboard

--- a/src/NuclearEvaluation.Server/Shared/DataManagement/PmiReportDashboard.razor
+++ b/src/NuclearEvaluation.Server/Shared/DataManagement/PmiReportDashboard.razor
@@ -1,5 +1,7 @@
 ﻿<RadzenCard Variant="Variant.Outlined" style="padding: 1rem;">
     <RadzenLabel Text="This tab displays all available reports along with their statuses and provides an option to download a report."
                  Style="font-weight: bold; display: block; margin-bottom: 10px;" />
+    <RadzenLabel Text="Distribution is currently not implemented, each distribution channel will remain 'In progress' and all reports will be in the 'Uploaded' status for now."
+                 Style="color: darkorange; font-weight: bold; display: block; margin-bottom: 20px;" />
     <PmiReportGrid />
 </RadzenCard>
