--- a/src/NuclearEvaluation.Server/Shared/DataManagement/PmiReportUpload.razor
+++ b/src/NuclearEvaluation.Server/Shared/DataManagement/PmiReportUpload.razor
@@ -1,12 +1,10 @@
 ﻿@using NuclearEvaluation.Kernel.Models.DataManagement.PMI
 
 <RadzenCard Variant="Variant.Outlined" style="padding: 1rem;">
-    <RadzenLabel Text="Easily upload your Project Management Insights (PMI) reports here."
+    <RadzenLabel Text="Upload your Project Management Insights (PMI) reports here."
                  Style="font-weight: bold; display: block; margin-bottom: 10px;" />
     <RadzenLabel Text="Acceptable format: .docx | Max file size: 50 MB"
                  Style="display: block; margin-bottom: 10px;" />
-    <RadzenLabel Text="Warning: This feature is in early alpha stage and may not work as expected."
-                 Style="color: darkorange; font-weight: bold; display: block; margin-bottom: 20px;" />
 
     <RadzenLabel Text="Report Date:"
                  Style="display: block; margin-bottom: 5px;" />
