Kerajel/pmi report dashboard (#7)
* pmi report dashboard done w/o distribution

---------

Co-authored-by: Dmitrii Botov <dmitrii.botov@rokolabs.com>

--- a/src/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
+++ b/src/NuclearEvaluation.Server/Shared/DataManagement/DataManagementTabs.razor
@@ -19,5 +19,9 @@
             <PmiReportUpload />
         </RadzenTabsItem>
 
+        <RadzenTabsItem Text="PMI Report Dashboard">
+            <PmiReportDashboard />
+        </RadzenTabsItem>
+
     </Tabs>
 </RadzenTabs>
