--- a/src/NuclearEvaluation.Server/Shared/Generics/ValidatedTextArea.razor
+++ b/src/NuclearEvaluation.Server/Shared/Generics/ValidatedTextArea.razor
@@ -4,7 +4,7 @@
 
 <div class="validated-textarea-container" style="position: relative;">
     <RadzenTextArea id="@Id"
-                    @ref="_textInputRef"
+                    @ref="_inputRef"
                     @bind-Value="_boundValue"
                     Style="@ComputedStyle"
                     Placeholder="@Placeholder"
