--- a/src/NuclearEvaluation.Server/Shared/Generics/ValidatedTextBox.razor
+++ b/src/NuclearEvaluation.Server/Shared/Generics/ValidatedTextBox.razor
@@ -4,7 +4,7 @@
 
 <div class="validated-textarea-container" style="position: relative;">
     <RadzenTextBox id="@Id"
-                   @ref="_textInputRef"
+                   @ref="_inputRef"
                    @bind-Value="_boundValue"
                    Style="@ComputedStyle"
                    Placeholder="@Placeholder"
