solution clean up
* code clean up

--- a/src/NuclearEvaluation.Server/Shared/Generics/ValidatedDateOnlyPicker.razor
+++ b/src/NuclearEvaluation.Server/Shared/Generics/ValidatedDateOnlyPicker.razor
@@ -4,7 +4,7 @@
 
 <div class="validated-textarea-container" style="position: relative;">
     <RadzenDatePicker id="@Id"
-                      @ref="_textInputRef"
+                      @ref="_inputRef"
                       Style="@ComputedStyle"
                       Placeholder="@Placeholder"
                       ValueChanged="new EventCallback<DateOnly?>(this, OnValueChanged)"
